Generate lineups file for each matchday

--- a/stagioni/2022-2023/giornate/1/partite/3.html
+++ b/stagioni/2022-2023/giornate/1/partite/3.html
@@ -34,9 +34,9 @@ permalink: /2022-2023/giornate/1/partite/3
     <td>7.0</td>
     <td>9.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Meret</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>NAP</td>
-    <td>6.0</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Karsdorp</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>5.0</td>
     <td>5.0</td>
   </tr>
   <tr>
@@ -78,10 +78,10 @@ permalink: /2022-2023/giornate/1/partite/3
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Meret</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>NAP</td>
-    <td>6.0</td>
-    <td>5.0</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Gyasi</span><span style="display: block"></span></td>
+    <td>SPE</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Koopmeiners</span><span style="display: block"></span></td>
@@ -111,10 +111,10 @@ permalink: /2022-2023/giornate/1/partite/3
     <td>5.0</td>
     <td>2.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Meret</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>NAP</td>
-    <td>6.0</td>
-    <td>5.0</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Felipe Anderson</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td>LAZ</td>
+    <td>6.5</td>
+    <td>7.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Muriel</span><span style="display: block"></span></td>
@@ -137,5 +137,96 @@ permalink: /2022-2023/giornate/1/partite/3
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
+  </tr>
+</table>
+<h1>Panchina</h1>
+<table>
+  <tr>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+    <th> -- </th>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Consigli</span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td>SAS</td>
+    <td>6.0</td>
+    <td>7.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Sirigu</span><span style="display: block"></span></td>
+    <td>NAP</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Mancini</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Dodò</span><span style="display: block"></span></td>
+    <td>FIO</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Augello</span><span style="display: block"></span></td>
+    <td>SAM</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Marusic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>LAZ</td>
+    <td>6.0</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pessina</span><span style="display: block"></span></td>
+    <td>MON</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Ikonè</span><span style="display: block"></span></td>
+    <td>FIO</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zambo Anguissa</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td>NAP</td>
+    <td>6.5</td>
+    <td>7.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Strefezza</span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dia</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>SAL</td>
+    <td>7.0</td>
+    <td>10.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Zanimacchia</span><span style="display: block"></span></td>
+    <td>CRE</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Caprari</span><span style="display: block"></span></td>
+    <td>MON</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gabbiadini</span><span style="display: block"></span></td>
+    <td>SAM</td>
+    <td>6.0</td>
+    <td>6.0</td>
   </tr>
 </table>
