--- a/stagioni/2022-2023/giornate/1/partite/4.html
+++ b/stagioni/2022-2023/giornate/1/partite/4.html
@@ -23,10 +23,10 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>6.5</td>
     <td>4.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Udogie</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
-    <td>UDI</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
+    <td>JUV</td>
     <td>7.5</td>
-    <td>10.0</td>
+    <td>9.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kim</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
@@ -34,10 +34,10 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
-    <td>JUV</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Udogie</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>UDI</td>
     <td>7.5</td>
-    <td>9.5</td>
+    <td>10.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Smalling</span><span style="display: block"></span></td>
@@ -67,10 +67,10 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
-    <td>JUV</td>
-    <td>7.5</td>
-    <td>9.5</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Spinazzola</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Calhanoglu</span><span style="display: block"></span></td>
@@ -89,10 +89,10 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
-    <td>JUV</td>
-    <td>7.5</td>
-    <td>9.5</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zaccagni</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>LAZ</td>
+    <td>7.0</td>
+    <td>10.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Mkhitaryan</span><span style="display: block"></span></td>
@@ -111,10 +111,10 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>8.5</td>
     <td>15.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
-    <td>JUV</td>
-    <td>7.5</td>
-    <td>9.5</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lookman</span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td>ATA</td>
+    <td>7.0</td>
+    <td>8.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Di Maria</span><span style="display: block"></span></td>
@@ -137,5 +137,96 @@ permalink: /2022-2023/giornate/1/partite/4
     <td>JUV</td>
     <td>7.0</td>
     <td>10.0</td>
+  </tr>
+</table>
+<h1>Panchina</h1>
+<table>
+  <tr>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+    <th> -- </th>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
+    <td>LAZ</td>
+    <td>-</td>
+    <td>-</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Pinsoglio</span><span style="display: block"></span></td>
+    <td>JUV</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Fazio</span><span style="display: block"></span></td>
+    <td>SAL</td>
+    <td>5.0</td>
+    <td>5.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Vojvoda</span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td>TOR</td>
+    <td>6.5</td>
+    <td>8.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Lucumì</span><span style="display: block"></span></td>
+    <td>BOL</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Okoli</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Sensi</span><span style="display: block"></span></td>
+    <td>MON</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Maggiore</span><span style="display: block"></span></td>
+    <td>SAL</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zalewski</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Beto</span><span style="display: block"></span></td>
+    <td>UDI</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"></span></td>
+    <td>JUV</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Colombo</span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>5.5</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>5.0</td>
+    <td>5.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Thorstvedt</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>SAS</td>
+    <td>5.5</td>
+    <td>5.0</td>
   </tr>
 </table>
