--- a/stagioni/2022-2023/giornate/1/partite/1.html
+++ b/stagioni/2022-2023/giornate/1/partite/1.html
@@ -23,10 +23,10 @@ permalink: /2022-2023/giornate/1/partite/1
     <td>6.0</td>
     <td>3.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Schuurs</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
-    <td>TOR</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Dragowski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td>SPE</td>
     <td>6.0</td>
-    <td>5.5</td>
+    <td>4.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Zappacosta</span><span style="display: block"></span></td>
@@ -67,10 +67,10 @@ permalink: /2022-2023/giornate/1/partite/1
     <td>6.5</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Dragowski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>SPE</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Hernandez T.</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>MIL</td>
     <td>6.0</td>
-    <td>4.0</td>
+    <td>5.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Cuadrado</span><span style="display: block"></span></td>
@@ -111,10 +111,10 @@ permalink: /2022-2023/giornate/1/partite/1
     <td>6.5</td>
     <td>8.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Dragowski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>SPE</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Pinamonti</span><span style="display: block"></span></td>
+    <td>SAS</td>
     <td>6.0</td>
-    <td>4.0</td>
+    <td>6.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Malinovskyi</span><span style="display: block"></span></td>
@@ -128,14 +128,105 @@ permalink: /2022-2023/giornate/1/partite/1
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Giroud</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Giroud</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
     <td>MIL</td>
     <td>7.5</td>
     <td>10.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Dragowski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>SPE</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Sanabria</span><span style="display: block"></span></td>
+    <td>TOR</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+</table>
+<h1>Panchina</h1>
+<table>
+  <tr>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+    <th> -- </th>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Onana</span><span style="display: block"></span></td>
+    <td>INT</td>
+    <td>-</td>
+    <td>-</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Skorupski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td>BOL</td>
     <td>6.0</td>
     <td>4.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Demiral</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>6.5</td>
+    <td>6.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Rodriguez R.</span><span style="display: block"></span></td>
+    <td>TOR</td>
+    <td>6.5</td>
+    <td>6.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> De Sciglio</span><span style="display: block"></span></td>
+    <td>JUV</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ghiglione</span><span style="display: block"></span></td>
+    <td>CRE</td>
+    <td>5.5</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pasalic</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Brozovic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>INT</td>
+    <td>6.5</td>
+    <td>9.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Locatelli</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>JUV</td>
+    <td>6.0</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Tameze</span><span style="display: block"></span></td>
+    <td>VER</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Ceesay</span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Kovalenko</span><span style="display: block"></span></td>
+    <td>SPE</td>
+    <td>6.5</td>
+    <td>6.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Boga</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>-</td>
+    <td>-</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Piatek</span><span style="display: block"></span></td>
+    <td>SAL</td>
+    <td>6.0</td>
+    <td>6.0</td>
   </tr>
 </table>
