--- a/stagioni/2022-2023/giornate/1/partite/2.html
+++ b/stagioni/2022-2023/giornate/1/partite/2.html
@@ -89,10 +89,10 @@ permalink: /2022-2023/giornate/1/partite/2
     <td>5.5</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Rui Patricio</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>ROM</td>
-    <td>5.0</td>
-    <td>1.0</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pereyra</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td>UDI</td>
+    <td>8.0</td>
+    <td>11.5</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Radonjic</span><span style="display: block"></span></td>
@@ -100,7 +100,7 @@ permalink: /2022-2023/giornate/1/partite/2
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zielinski</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zielinski</span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>7.0</td>
@@ -133,9 +133,100 @@ permalink: /2022-2023/giornate/1/partite/2
     <td>7.0</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Rui Patricio</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>ROM</td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Arnautovic</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>BOL</td>
+    <td>7.5</td>
+    <td>13.5</td>
+  </tr>
+</table>
+<h1>Panchina</h1>
+<table>
+  <tr>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+    <th> -- </th>
+    <th>Nome</th>
+    <th></th>
+    <th>Voto</th>
+    <th>FV</th>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Montipò</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td>VER</td>
+    <td>6.0</td>
     <td>5.0</td>
-    <td>1.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Svilar</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Gosens</span><span style="display: block"></span></td>
+    <td>INT</td>
+    <td>-</td>
+    <td>-</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ferrari G.</span><span style="display: block"></span></td>
+    <td>SAS</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"></span></td>
+    <td>EMP</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> De Silvestri</span><span style="display: block"></span></td>
+    <td>BOL</td>
+    <td>5.5</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Lobotka</span><span style="display: block"></span></td>
+    <td>NAP</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Cristante</span><span style="display: block"></span></td>
+    <td>ROM</td>
+    <td>5.5</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Djuricic</span><span style="display: block"></span></td>
+    <td>SAM</td>
+    <td>5.5</td>
+    <td>5.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> De Roon</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>6.5</td>
+    <td>6.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gonzalez N.</span><span style="display: block"></span></td>
+    <td>FIO</td>
+    <td>-</td>
+    <td>-</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Raspadori</span><span style="display: block"></span></td>
+    <td>NAP</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>EMP</td>
+    <td>6.5</td>
+    <td>9.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lasagna</span><span style="display: block"></span></td>
+    <td>VER</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
 </table>
