--- a/stagioni/2022-2023/giornate/1/1.html
+++ b/stagioni/2022-2023/giornate/1/1.html
@@ -14,3 +14,148 @@ permalink: /2022-2023/giornate/1
     <tr>
   {% endfor %}
 </table>
+<h1>Classifica</h1>
+  <table>
+    <tr>
+      <th>Pos</th>      <th>Squadra</th>      <th></th>      <th>G</th>      <th>V</th>      <th>N</th>      <th>P</th>      <th>Gf</th>      <th>Gs</th>      <th>Dr</th>      <th>Pt.</th>      <th>Pt. Totali</th>    </tr>
+    <tr>
+      <td>1</td>
+      <td>Real Pollo</td>
+      <td></td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>4</td>
+      <td>2</td>
+      <td>2</td>
+      <td>3</td>
+      <td>84,5</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Patetico Mineiro</td>
+      <td></td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>3</td>
+      <td>70,5</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Reggisenal</td>
+      <td></td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>3</td>
+      <td>69,5</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>MedusaTeam WFC</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>67,5</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Pompy FC</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>66,5</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Ire Framba United</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>63,5</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>Team Barco FC</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>62,5</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Apoel Kan 1893</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>2</td>
+      <td>4</td>
+      <td>-2</td>
+      <td>0</td>
+      <td>74,5</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Paris Saint Germano</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>-1</td>
+      <td>0</td>
+      <td>65,5</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>Godopolisportiva Antonio Ricci</td>
+      <td></td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>-1</td>
+      <td>0</td>
+      <td>60</td>
+    </tr>
+  </table>
