Make consistent directory structure

--- a/stagioni/2022_2023/giornate/1/1.html
+++ b/stagioni/2022_2023/giornate/1/1.html
@@ -1,7 +1,7 @@
 ---
-layout: giornata_22_23
+layout: giornata_2022_2023
 title: Giornata 1
-permalink: /2022-2023/giornate/1
+permalink: /2022_2023/giornate/1
 ---
 
 <h1>Risultati</h1>
