--- a/stagioni/2022_2023/mercati/asta-iniziale.html
+++ b/stagioni/2022_2023/mercati/asta-iniziale.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Asta iniziale 2022-2023
-permalink: /2022-2023/mercati/asta-iniziale
+title: Asta iniziale 2022_2023
+permalink: /2022_2023/mercati/asta-iniziale
 ---
 
 {% for s in site.data.stagione_2022_2023.fantasquadre %}
