--- a/stagioni/2022_2023/giornate/2/partite/1.html
+++ b/stagioni/2022_2023/giornate/2/partite/1.html
@@ -1,10 +1,15 @@
 ---
-layout: partita_2022_2023
+layout: page
 title: Patetico Mineiro (2-1) Medusa Team
 permalink: /2022_2023/giornate/2/partite/1
 ---
 
-<h1>Titolari</h1>
+<a href="..">Riepilogo</a>
+{% for item in site.data.stagione_2022_2023.giornata_2%}
+  || <a href="{{ item.id }}">
+    {{ item.home }} ({{ item.score }}) {{ item.away }}
+  </a>
+{% endfor %}<h1>Titolari</h1>
 <table>
   <tr>
     <th>Nome</th>
