Aggiungi moduli, modificatori e punti totali di ogni partita

--- a/stagioni/2022_2023/giornate/1/partite/4.html
+++ b/stagioni/2022_2023/giornate/1/partite/4.html
@@ -12,6 +12,10 @@ permalink: /2022_2023/giornate/1/partite/4
 {% endfor %}<h1>Titolari</h1>
 <table>
   <tr>
+    <td colspan="4">ApoelKan (433)</td>
+    <td></td>
+    <td colspan="4">Real Pollo (433)</td>
+  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -147,6 +151,10 @@ permalink: /2022_2023/giornate/1/partite/4
 <h1>Panchina</h1>
 <table>
   <tr>
+    <td colspan="4">ApoelKan (433)</td>
+    <td></td>
+    <td colspan="4">Real Pollo (433)</td>
+  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -233,5 +241,22 @@ permalink: /2022_2023/giornate/1/partite/4
     <td>SAS</td>
     <td>5.5</td>
     <td>5.0</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <td>-4.0</td>
+    <td style="text-align: center" colspan="7">Modificatore difesa</td>
+    <td>-2.0</td>
+  </tr>
+  <tr>
+    <td>0.0</td>
+    <td style="text-align: center" colspan="7">Bonus fairplay</td>
+    <td>0.0</td>
+  </tr>
+  <tr>
+    <td>74.5</td>
+    <td style="text-align: center" colspan="7">Punti totali</td>
+    <td>84.5</td>
   </tr>
 </table>
