--- a/stagioni/2022_2023/giornate/2/partite/1.html
+++ b/stagioni/2022_2023/giornate/2/partite/1.html
@@ -12,6 +12,10 @@ permalink: /2022_2023/giornate/2/partite/1
 {% endfor %}<h1>Titolari</h1>
 <table>
   <tr>
+    <td colspan="4">Patetico Mineiro (433)</td>
+    <td></td>
+    <td colspan="4">Medusa Team (451)</td>
+  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -147,6 +151,10 @@ permalink: /2022_2023/giornate/2/partite/1
 <h1>Panchina</h1>
 <table>
   <tr>
+    <td colspan="4">Patetico Mineiro (433)</td>
+    <td></td>
+    <td colspan="4">Medusa Team (451)</td>
+  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -233,5 +241,22 @@ permalink: /2022_2023/giornate/2/partite/1
     <td>BOL</td>
     <td>7.0</td>
     <td>10.0</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <td>-4.0</td>
+    <td style="text-align: center" colspan="7">Modificatore difesa</td>
+    <td>-2.0</td>
+  </tr>
+  <tr>
+    <td>0.0</td>
+    <td style="text-align: center" colspan="7">Bonus fairplay</td>
+    <td>0.0</td>
+  </tr>
+  <tr>
+    <td>74.0</td>
+    <td style="text-align: center" colspan="7">Punti totali</td>
+    <td>69.5</td>
   </tr>
 </table>
