--- a/stagioni/2022_2023/giornate/3/partite/2.html
+++ b/stagioni/2022_2023/giornate/3/partite/2.html
@@ -12,9 +12,9 @@ permalink: /2022_2023/giornate/3/partite/2
 {% endfor %}<h1>Titolari</h1>
 <table>
   <tr>
-    <td colspan="4">Paris Saint Germano (343)</td>
+    <td colspan="4">Paris Saint Germano (433)</td>
     <td></td>
-    <td colspan="4">Real Pollo (532)</td>
+    <td colspan="4">Real Pollo (433)</td>
   </tr>
     <th>Nome</th>
     <th></th>
@@ -150,11 +150,6 @@ permalink: /2022_2023/giornate/3/partite/2
 </table>
 <h1>Panchina</h1>
 <table>
-  <tr>
-    <td colspan="4">Paris Saint Germano (343)</td>
-    <td></td>
-    <td colspan="4">Real Pollo (532)</td>
-  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -245,14 +240,19 @@ permalink: /2022_2023/giornate/3/partite/2
 </table>
 <table>
   <tr>
-    <td>-2.0</td>
+    <td>-2</td>
     <td style="text-align: center" colspan="7">Modificatore difesa</td>
-    <td>0.0</td>
+    <td>0</td>
   </tr>
   <tr>
-    <td>0.0</td>
+    <td>0</td>
     <td style="text-align: center" colspan="7">Bonus fairplay</td>
-    <td>0.0</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>343</td>
+    <td style="text-align: center" colspan="7">Modulo finale</td>
+    <td>532</td>
   </tr>
   <tr>
     <td>70.5</td>
