--- a/stagioni/2022_2023/giornate/2/partite/5.html
+++ b/stagioni/2022_2023/giornate/2/partite/5.html
@@ -150,11 +150,6 @@ permalink: /2022_2023/giornate/2/partite/5
 </table>
 <h1>Panchina</h1>
 <table>
-  <tr>
-    <td colspan="4">Team Barco FC (442)</td>
-    <td></td>
-    <td colspan="4">Paris Saint Germano (433)</td>
-  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -245,14 +240,19 @@ permalink: /2022_2023/giornate/2/partite/5
 </table>
 <table>
   <tr>
-    <td>-2.0</td>
+    <td>-2</td>
     <td style="text-align: center" colspan="7">Modificatore difesa</td>
-    <td>0.0</td>
+    <td>0</td>
   </tr>
   <tr>
-    <td>1.0</td>
+    <td>1</td>
     <td style="text-align: center" colspan="7">Bonus fairplay</td>
-    <td>1.0</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>442</td>
+    <td style="text-align: center" colspan="7">Modulo finale</td>
+    <td>433</td>
   </tr>
   <tr>
     <td>72.0</td>
