--- a/stagioni/2022_2023/giornate/3/partite/1.html
+++ b/stagioni/2022_2023/giornate/3/partite/1.html
@@ -150,11 +150,6 @@ permalink: /2022_2023/giornate/3/partite/1
 </table>
 <h1>Panchina</h1>
 <table>
-  <tr>
-    <td colspan="4">Medusa Team (442)</td>
-    <td></td>
-    <td colspan="4">Team Barco FC (442)</td>
-  </tr>
     <th>Nome</th>
     <th></th>
     <th>Voto</th>
@@ -245,14 +240,19 @@ permalink: /2022_2023/giornate/3/partite/1
 </table>
 <table>
   <tr>
-    <td>-4.0</td>
+    <td>-4</td>
     <td style="text-align: center" colspan="7">Modificatore difesa</td>
-    <td>0.0</td>
+    <td>0</td>
   </tr>
   <tr>
-    <td>0.0</td>
+    <td>0</td>
     <td style="text-align: center" colspan="7">Bonus fairplay</td>
-    <td>1.0</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>442</td>
+    <td style="text-align: center" colspan="7">Modulo finale</td>
+    <td>442</td>
   </tr>
   <tr>
     <td>61.5</td>
